kubernetes/website-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-website-deploy
spec:
  selector:
    matchLabels:
      app: cc-website-deploy
  replicas: 10
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cc-website-deploy
    spec:
      containers:
      - name: cc-website-container
        image: aasrith1906/cc-website-image:latest
        ports:
        - containerPort: 5001
