kubernetes/ingress-rest-api.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cc-project 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  rules:
  - host: cc-website.api.com 
    http:
      paths:
      - path: 
        backend:
          serviceName: rest-api-deploy 
          servicePort: 80
